--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
-"dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "lucide-react": "^0.344.0",
-  "@supabase/supabase-js": "^2.39.3"
+{
+  "name": "run-coach---ai-running-assistant",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.344.0",
+    "@supabase/supabase-js": "^2.39.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "~5.3.3",
+    "vite": "^5.1.4"
+  }
 }
